// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge render Badge status/color when contains children 1`] = `
LoadedCheerio {
  "0": <div>
    <span
      class="dcloud-badge dcloud-badge-status"
    >
      <a />
      <sup
        class="dcloud-scroll-number dcloud-badge-count dcloud-badge-status-success"
        data-show="true"
        title="5"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            5
          </span>
        </span>
      </sup>
    </span>
    <span
      class="dcloud-badge dcloud-badge-status"
    >
      <a />
      <sup
        class="dcloud-scroll-number dcloud-badge-count dcloud-badge-status-blue"
        data-show="true"
        title="5"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            5
          </span>
        </span>
      </sup>
    </span>
    <span
      class="dcloud-badge dcloud-badge-status"
    >
      <a />
      <sup
        class="dcloud-scroll-number dcloud-badge-count"
        data-show="true"
        style="background: rgb(0, 136, 204);"
        title="5"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            5
          </span>
        </span>
      </sup>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge render correct with negative number 1`] = `
LoadedCheerio {
  "0": <div>
    <span
      class="dcloud-badge dcloud-badge-not-a-wrapper"
    >
      <sup
        class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
        data-show="true"
        title="-10"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            -
          </span>
        </span>
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            1
          </span>
        </span>
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            0
          </span>
        </span>
      </sup>
    </span>
    <span
      class="dcloud-badge dcloud-badge-not-a-wrapper"
    >
      <sup
        class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
        data-show="true"
        title="-10"
      >
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            -
          </span>
        </span>
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            1
          </span>
        </span>
        <span
          class="dcloud-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="dcloud-scroll-number-only-unit current"
          >
            0
          </span>
        </span>
      </sup>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper dcloud-badge-rtl"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge rtl render component should be rendered correctly in RTL direction 2`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-rtl"
  >
    <a
      class="head-example"
      href="#"
    >
      head
    </a>
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      style="margin-top: 10px; left: 10px;"
      title="5"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          5
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should be compatible with borderColor style 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      style="background-color: rgb(255, 255, 255); color: rgb(153, 153, 153); border-color: #d9d9d9; box-shadow: 0 0 0 1px #d9d9d9 inset;"
      title="4"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          4
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should render when count is changed 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="10"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          1
        </span>
      </span>
      <span
        class="dcloud-scroll-number-only"
        style="transform: translateY(-100%);"
      >
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -900%; left: 0px;"
        >
          0
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -800%; left: 0px;"
        >
          1
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -700%; left: 0px;"
        >
          2
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -600%; left: 0px;"
        >
          3
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -500%; left: 0px;"
        >
          4
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -400%; left: 0px;"
        >
          5
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -300%; left: 0px;"
        >
          6
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -200%; left: 0px;"
        >
          7
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -100%; left: 0px;"
        >
          8
        </span>
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          9
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 100%; left: 0px;"
        >
          0
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should render when count is changed 2`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="11"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          1
        </span>
      </span>
      <span
        class="dcloud-scroll-number-only"
        style="transform: translateY(-100%);"
      >
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -900%; left: 0px;"
        >
          1
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -800%; left: 0px;"
        >
          2
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -700%; left: 0px;"
        >
          3
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -600%; left: 0px;"
        >
          4
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -500%; left: 0px;"
        >
          5
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -400%; left: 0px;"
        >
          6
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -300%; left: 0px;"
        >
          7
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -200%; left: 0px;"
        >
          8
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -100%; left: 0px;"
        >
          9
        </span>
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          0
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 100%; left: 0px;"
        >
          1
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should render when count is changed 3`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="11"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          1
        </span>
      </span>
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
          style=""
        >
          1
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should render when count is changed 4`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="111"
    >
      99+
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should render when count is changed 5`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count dcloud-badge-multiple-words"
      data-show="true"
      title="10"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          1
        </span>
      </span>
      <span
        class="dcloud-scroll-number-only"
        style="transition: none;"
      >
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          0
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should render when count is changed 6`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge dcloud-badge-not-a-wrapper"
  >
    <sup
      class="dcloud-scroll-number dcloud-badge-count"
      data-show="true"
      title="9"
    >
      <span
        class="dcloud-scroll-number-only"
        style="transform: translateY(100%);"
      >
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: -100%; left: 0px;"
        >
          9
        </span>
        <span
          class="dcloud-scroll-number-only-unit current"
        >
          0
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 100%; left: 0px;"
        >
          1
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 200%; left: 0px;"
        >
          2
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 300%; left: 0px;"
        >
          3
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 400%; left: 0px;"
        >
          4
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 500%; left: 0px;"
        >
          5
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 600%; left: 0px;"
        >
          6
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 700%; left: 0px;"
        >
          7
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 800%; left: 0px;"
        >
          8
        </span>
        <span
          class="dcloud-scroll-number-only-unit"
          style="position: absolute; top: 900%; left: 0px;"
        >
          9
        </span>
      </span>
    </sup>
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Badge should support offset when count is a ReactNode 1`] = `
LoadedCheerio {
  "0": <span
    class="dcloud-badge"
  >
    <a
      class="head-example"
      href="#"
    >
      head
    </a>
    <span
      class="dcloud-scroll-number-custom-component custom"
      style="margin-top: 20px; right: -10px; color: rgb(245, 34, 45);"
    />
  </span>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
